GS-9199 Community Discussion Boards: Preview hover buttons and avitar are not lining up correctly - correct IE alignment of discussion bubble with arrow on preview of a reply.

--- a/src/webapp/res/css/discussionBoards/db_community.css
+++ b/src/webapp/res/css/discussionBoards/db_community.css
@@ -1306,6 +1306,7 @@ fieldset label {
 #previewReplyDialog .db_reply_full{
     width:430px;
     background:white;
+    float:left;
 }
 
 #previewReplyDialog .sd-btn-layout{
